# limoful

./: CMakeLists.txt  README.md  TODO.md  result
misc/: .Rhistory  smooth_curves.R
src/: BuildMountain.cpp  BuildMountain.hpp  CMakeLists.txt  Curve.cpp  Curve.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Meshifier.cpp  Meshifier.hpp  PolarGrid.cpp  PolarGrid.hpp  Viewer.cpp  Viewer.hpp  curves.csv  curves.qrc  curves_smoothed.csv  main.cpp
